--- a/TSA_Dataset2.ipynb
+++ b/TSA_Dataset2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TSA Dataset2",
       "provenance": [],
-      "authorship_tag": "ABX9TyOhRpfQT6nZMcKS8JIJcRiH",
+      "authorship_tag": "ABX9TyMIP2ryDvS9txwVQATRY8d1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -459,6 +459,79 @@
           "name": "stdout",
           "text": [
             "49.21341021615746 48.708650601690096\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**AUgmented DIckey Fuller test**"
+      ],
+      "metadata": {
+        "id": "F0CODpuFp9gN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from statsmodels.tsa.stattools import adfuller\n",
+        "data=pd.read_csv('/content/daily-total-female-births.csv',index_col='Date',squeeze=True)"
+      ],
+      "metadata": {
+        "id": "lYE8kd1-pthL"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = data.values\n",
+        "result = adfuller(x)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LHoQ8OJDp5MY",
+        "outputId": "8b694723-2cd9-454a-9696-0f7c0cf246ed"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(-4.808291253559765, 5.2434129901498554e-05, 6, 358, {'1%': -3.448748905151901, '5%': -2.8696473721448728, '10%': -2.5710891239349585}, 2343.8290926464197)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from numpy import log\n",
+        "x = data.values\n",
+        "x = log(x)\n",
+        "result = adfuller(x)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Us8-s7tpqPWV",
+        "outputId": "c54082fe-24f6-40b1-ce57-570f54de4b9c"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(-4.353173151882314, 0.0003588965449025645, 7, 357, {'1%': -3.44880082033912, '5%': -2.869670179576637, '10%': -2.5711012838861036}, -250.11025197297897)\n"
           ]
         }
       ]
